--- a/proj/webapp/templates/base.html
+++ b/proj/webapp/templates/base.html
@@ -9,7 +9,7 @@
     <div class="w3-container w3-black">
         <h1>A Cocktail Library
             <div class="w3-row-padding w3-margin-top"></div>
-            <a href="/newcard"> ???</a>
+            <a href="/newcard"> home</a>
         </h1>
     </div>
 
