--- a/proj/webapp/templates/indexoriginal1.html
+++ b/proj/webapp/templates/indexoriginal1.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+% extends "base.html" %}
 
 {% block content %}
 
 
 <div class="w3-row-padding w3-margin-top">
 
-    <div class="w3-half">
+    <div class="w3-third">
         <div class="w3-card">
             <img src="/static/images/blank.jpg" style="width:100%">
             <div class="w3-container">
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <div class="w3-half">
+    <div class="w3-third">
         <div class="w3-card">
             <img src="/static/images/blank.jpg" style="width:100%">
             <div class="w3-container">
@@ -23,12 +23,19 @@
         </div>
     </div>
 
-    
-</div>
+    <div class="w3-third">
+        <div class="w3-card">
+            <img src="/static/images/blank.jpg" style="width:100%">
+            <div class="w3-container">
+                <h4>The Times</h4>
+            </div>
+        </div>
+    </div>
 
+</div>
 <div class="w3-row-padding w3-margin-top">
 
-    <div class="w3-half">
+    <div class="w3-third">
         <div class="w3-card">
             <img src="/static/images/blank.jpg" style="width:100%">
             <div class="w3-container">
@@ -37,7 +44,7 @@
         </div>
     </div>
 
-    <div class="w3-half">
+    <div class="w3-third">
         <div class="w3-card">
             <img src="/static/images/blank.jpg" style="width:100%">
             <div class="w3-container">
@@ -46,6 +53,14 @@
         </div>
     </div>
 
+    <div class="w3-third">
+        <div class="w3-card">
+            <img src="/static/images/blank.jpg" style="width:100%">
+            <div class="w3-container">
+                <h4>The Scotsman</h4>
+            </div>
+        </div>
+    </div>
 
 </div>
 
