page templates and routes

--- a/proj/webapp/templates/base.html
+++ b/proj/webapp/templates/base.html
@@ -13,7 +13,7 @@
             <h1>A Cocktail Library</h1>
             <div class="w3-row-padding w3-margin-top"></div>
             <h2>
-            <a href="/newcard"> home</a>
+            <a href="/home"> home</a>
             </h2>
     </div>
 
