--- a/proj/webapp/templates/s_search.html
+++ b/proj/webapp/templates/s_search.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
 
-<title>A Cocktail Library</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-
-<body style="background-color:blanchedalmond;">
-
-    <div class="w3-container w3-black">
-
-            <h1>A Cocktail Library</h1>
-            <div class="w3-row-padding w3-margin-top"></div>
-            
-    </div>
+{% block content %}
 
 <div class="w3-row-padding w3-margin-top">
 
@@ -22,7 +9,7 @@
             <img src="/static/images/cocktails.jpg" style="width:100%">
             <div class="w3-container w3-sand">
                 <h4>
-                    <a href="/c_search">Search for Cocktails by Name</a>
+                    <a href="/newcard">Search for Cocktails by Name</a>
                 </h4>
             </div>
         </div>
@@ -33,7 +20,7 @@
             <img src="/static/images/spirits.jpeg" style="width:100%">
             <div class="w3-container w3-sand">
                 <h4>
-                    <a href="/s_search">Search for Cocktails by Spirit</a>
+                    <a href="/newcard">Search for Cocktails by Spirit</a>
                 </h4>
             </div>
         </div>
@@ -44,10 +31,7 @@
 
    
 
-
 </div>
 
 
-</body>
-
-</html>
+{% endblock %}
