--- a/proj/webapp/templates/c_search.html
+++ b/proj/webapp/templates/c_search.html
@@ -19,6 +19,12 @@
     </div>
 
     <div class="w3-half">
+        <div class="w3-container w3-sand">
+            <h4>
+                <a href="/newcard">Search for Cocktails by Spirit</a>
+            </h4>
+        </div>
+        
         <div class="w3-card">
             <img src="/static/images/spirits.jpeg" style="width:100%">
             <div class="w3-container w3-sand">
