--- a/proj/webapp/templates/newcard.html
+++ b/proj/webapp/templates/newcard.html
@@ -5,14 +5,12 @@
 
 <div class="w3-container w3-black w3-margin-bottom">
 <h1>White Russian</h1>
-<a href="home"><span class="w3-left w3-xxlarge">&laquo;</span></a>
-<a href="nowhere"><span class="w3-right w3-xxlarge">&raquo;</span></a>
 </div>
 
 <div class="w3-row-padding ">
 
 <div class="w3-third">
-  <img src="img_chardonnay.jpg" style="width:100%">
+  <img src="blank.jpg" style="width:100%">
   <h2>Recipe</h2>
   <table class="w3-table w3-striped w3-bordered w3-border">
   <thead class="w3-teal"><th style="width:30%">Food</th><th>Type</th></thead>
