--- a/proj/webapp/templates/help.html
+++ b/proj/webapp/templates/help.html
@@ -5,7 +5,7 @@
 <div class="w3-row-padding w3-margin-top">
 
     <div class="w3-container">
-        News stand help. Click <a href="/">here</a> to go back to the stand
+        Placemarker page. Click <a href="/">here</a> to return to home.
     </div>
 
 
