--- a/proj/webapp/templates/home.html
+++ b/proj/webapp/templates/home.html
@@ -16,7 +16,7 @@
     </div>
 
 <div class="w3-row-padding w3-margin-top">
-
+{{count}}
     <div class="w3-half">
         <div class="w3-card">
             <img src="/static/images/cocktails.jpg" style="width:100%">
